# selenium_stepik_course

./: .gitignore  config.py  pyproject.toml
project_tests/conditions/: text.py
project_tests/utils/: window.py
resources/: data.json
tests/: conftest.py  test_drag_and_drop.py  test_elements_search.py  test_methods.py  test_scroll.py  test_waits.py  test_windows_and_tabs.py
